# AdventOfCode

./: .gitignore  README.md
2019/02/: CMakeLists.txt  README.md
2019/02/source/app/: main.cpp
2019/02/source/include/: include.h
2019/02/source/src/: lib.cpp
2021/: CMakeLists.txt
2021/01/: README.md
2021/01/source/app/: main.cpp
2021/02/: README.md
2021/02/source/app/: main.cpp
2021/03/: README.md
2021/03/source/app/: main.cpp
2021/03/source/include/: include.h
2021/03/source/src/: CMakeLists.txt  lib.cpp
2021/04/: README.md
2021/04/source/app/: main.cpp
2021/04/source/include/: include.h
2021/04/source/src/: lib.cpp
2021/05/: README.md
2021/05/source/app/: main.cpp
2021/05/source/include/: include.h
2021/05/source/src/: lib.cpp
2021/06/: README.md
2021/06/source/app/: main.cpp
2021/07/: README.md
2021/07/source/app/: CMakeLists.txt  main.cpp
2021/08/: README.md
2021/08/source/app/: main.cpp
2021/08/source/include/: include.h
2021/08/source/src/: lib.cpp
2021/09/: README.md
2021/09/source/app/: main.cpp
2021/09/source/include/: include.h
2021/09/source/src/: lib.cpp
2021/10/: README.md
2021/10/source/app/: main.cpp
2021/11/: README.md
2021/11/source/app/: main.cpp
2021/11/source/include/: include.h
2021/11/source/src/: lib.cpp
2021/12/: README.md
2021/12/source/app/: main.cpp
2021/12/source/include/: include.h
2021/12/source/src/: lib.cpp
2021/13/: README.md
2021/13/source/app/: main.cpp
2021/14/: README.md
2021/14/source/app/: main.cpp
2021/15/: README.md
2021/15/source/app/: main.cpp
2021/15/source/include/: include.h
2021/15/source/src/: lib.cpp
2021/16/: README.md
2021/16/source/app/: main.cpp
2021/16/source/include/: include.cpp  include.h
2021/16/source/src/: lib.cpp
2021/17/: README.md
2021/17/source/app/: main.cpp
2021/18/: README.md
2021/18/source/app/: main.cpp
2021/18/source/include/: include.h
2021/18/source/src/: lib.cpp
2021/19/: README.md
2021/19/source/app/: main.cpp
2021/20/: README.md
2021/20/source/app/: main.cpp
2021/20/source/include/: include.h
2021/20/source/src/: lib.cpp
2021/21/: README.md
2021/21/source/app/: main.cpp
2021/22/: README.md
2021/22/source/app/: main.cpp
2021/22/source/include/: include.h
2021/22/source/src/: lib.cpp
2021/Template/: CMakeLists.txt  README.md
2021/Template/source/: CMakeLists.txt
2021/Template/source/app/: CMakeLists.txt  main.cpp
2021/Template/source/cmake/: CMakeLists.txt  config.h.in
2021/Template/source/include/: include.h
2021/Template/source/src/: CMakeLists.txt  lib.cpp
2022/: CMakeLists.txt
2022/01/: README.md
2022/01/source/app/: main.cpp
2022/02/: README.md
2022/03/: README.md
2022/04/: README.md
2022/05/: README.md
2022/06/: README.md
2022/07/: CMakeLists.txt  README.md
2022/08/: README.md
2022/09/: README.md
2022/10/: README.md
2022/11/: README.md
2022/12/: README.md
2022/13/: README.md
2022/14/: README.md
2022/15/: README.md
2022/Template/: README.md
2023/01/: CMakeLists.txt  README.md
2023/01/app/: main.cpp
(+113 files in other folders)
